* Fixed use of deprecated wp.editor and replaced with use of wp.blockEditor in Groups Non-member Block.
* Added missing package.json etc. to Groups blocks sources.
* Block code reviewed, fixed formatting, added more documentation and cleaned up.
* Added classes to div wrappers that contain block content rendered.

= 2.10.0 =
* WordPress 5.4 compatible.
* Removed an alternative call to the deprecated wp_cache_reset() and preferrably calling wp_cache_init() when wp_cache_switch_to_blog() is not available.
* Fixed showing the Groups meta box to restrict posts on new post types which show access restrictions disabled in the options.
* Updated the add-ons section.

= 2.9.0 =
* WordPress 5.3 compatible.
* Added member counts displayed for each group under Groups > Groups.
* Fixed issues with and added missing internal code documentation mainly related to undocumented types.
* Guarded against errors in a utility function for comparison of capabilities when the comparison is made against non-objects.

= 2.8.0 =
* Added the Groups Members block: A block whose content is only visible for members of selected groups.
* Added the Groups Non-Members block: a block whose content is hidden for members of chosen groups.
* Removed use of parenthesis with require_once and include_once.

= 2.7.2 =
* Fixes an issue with page builders and front-end editing.
* Fixed CSS typo in UIE.
* Formatting improvements.
* Added missing escaping.

= 2.7.1 =
* Improved UIE rendering for group choices and made it more resilient to load dependencies, Javascript execution order and pages where it is used.
* Fixed UIE rendering for group choices with the block editor which would unduly cap the list visually providing an awkward UX.
* Better jQuery dependency resilience on the Users screen.

= 2.7.0 =
* WordPress 5.2 compatible.
* Fixed translation loading to apply the user's locale when set.
* Updated the German translation.
* Updated the Spanish translation.