@@ -28,8 +28,37 @@ if ( !defined( 'ABSPATH' ) ) {
  */
 class Groups_WordPress {
 
+	/**
+	 * Cache group
+	 *
+	 * @var string
+	 */
 	const CACHE_GROUP = 'groups';
+
+	/**
+	 * Cache key prefix
+	 *
+	 * @var string
+	 */
 	const HAS_CAP     = 'has_cap';
+
+	/**
+	 * Filter priority: groups_user_can
+	 *
+	 * @var integer
+	 *
+	 * @since 2.11.0
+	 */
+	const GROUPS_USER_CAN_FILTER_PRIORITY = 10;
+
+	/**
+	 * Filter priority: user_has_cap
+	 *
+	 * @var int
+	 *
+	 * @since 2.11.0
+	 */
+	const USER_HAS_CAP_FILTER_PRIORITY = PHP_INT_MAX;
 
 	/**
 	 * Hook into actions to extend user capabilities.
@@ -41,8 +70,8 @@ class Groups_WordPress {
 	 */
 	public static function init() {
 		// args: string $result, Groups_User $groups_user, string $capability
-		add_filter( 'groups_user_can', array( __CLASS__, 'groups_user_can' ), 10, 3 );
-		add_filter( 'user_has_cap', array( __CLASS__, 'user_has_cap' ), 10, 4 );
+		add_filter( 'groups_user_can', array( __CLASS__, 'groups_user_can' ), self::GROUPS_USER_CAN_FILTER_PRIORITY, 3 );
+		add_filter( 'user_has_cap', array( __CLASS__, 'user_has_cap' ), self::USER_HAS_CAP_FILTER_PRIORITY, 4 );
 	}
 
 	/**
@@ -77,7 +106,6 @@ class Groups_WordPress {
 	 */
 	public static function user_has_cap( $allcaps, $caps, $args, $user ) {
 		if ( is_array( $caps ) ) {
-
 			$user_id = 0;
 			if ( isset( $user->ID ) ) {
 				$user_id = intval( $user->ID );
@@ -95,13 +123,13 @@ class Groups_WordPress {
 				// we need to deactivate this because invoking $groups_user->can()
 				// would trigger this same function and we would end up
 				// in an infinite loop
-				remove_filter( 'user_has_cap', array( __CLASS__, 'user_has_cap' ), 10 );
+				remove_filter( 'user_has_cap', array( __CLASS__, 'user_has_cap' ), self::USER_HAS_CAP_FILTER_PRIORITY );
 				foreach( $caps as $cap ) {
 					if ( $groups_user->can( $cap ) ) {
 						$allcaps[$cap] = true;
 					}
 				}
-				add_filter( 'user_has_cap', array( __CLASS__, 'user_has_cap' ), 10, 4 );
+				add_filter( 'user_has_cap', array( __CLASS__, 'user_has_cap' ), self::USER_HAS_CAP_FILTER_PRIORITY, 4 );
 				Groups_Cache::set( self::HAS_CAP . '_' . $user_id . '_' . $hash, $allcaps, self::CACHE_GROUP );
 			}
 		}
