@@ -10,6 +10,7 @@
 * Added missing package.json etc. to Groups blocks sources.
 * Block code reviewed, fixed formatting, added more documentation and cleaned up.
 * Added classes to div wrappers that contain block content rendered.
+* Modified the user_has_cap filter priority so that it kicks in as late as possible.
 
 = 2.10.0 =
 * WordPress 5.4 compatible.
